# Kijiji-Ad-Parser

./: README.md  ad_parser.py  main.py  parser.py  pyproject.toml  save_dict_to_db.py
models/: ads.py
service/: ads_getter.py  saving_to_db.py
